RESOLVED FIXED191339
ServiceWorker Inspector: Uncaught Exception: null is not an object (evaluating 'resource.target.addResource')
https://bugs.webkit.org/show_bug.cgi?id=191339
Summary ServiceWorker Inspector: Uncaught Exception: null is not an object (evaluatin...
Joseph Pecoraro
Reported 2018-11-06 16:48:47 PST
* Steps to Reproduce 1. Inspect ServiceWorker on airhorner.com 2. Reload the airhorner.com page => Exception in inspector for script with `targetId` of "serviceWorkerScriptLoad:" which is unexpected ------- Inspected URL: https://airhorner.com/ Loading completed: true Dispatch Source: Protocol Event Protocol Event: {"method":"Network.requestWillBeSent","params":{"requestId":"0.28","frameId":"","loaderId":"","documentURL":"https://airhorner.com/sw.js","request":{"url":"https://airhorner.com/sw.js","method":"GET","headers":{"Service-Worker":"script"}},"timestamp":3.59948630600411,"walltime":1541551630.689134,"initiator":{"type":"other"},"targetId":"serviceWorkerScriptLoad:"}} Uncaught Exceptions: - null is not an object (evaluating 'resource.target.addResource') (at NetworkManager.js:619:28) _addNewResourceToFrameOrTarget @ NetworkManager.js:619:28 resourceRequestWillBeSent @ NetworkManager.js:274:55 requestWillBeSent @ NetworkObserver.js:41:52 dispatchEvent @ InspectorBackend.js:305:42 _dispatchEvent @ Connection.js:194:32 dispatch @ Connection.js:72:32 dispatch @ InspectorBackend.js:154:49 dispatchNextQueuedMessageFromBackend @ MessageDispatcher.js:42:34 Additional Details: cause --> An uncaught exception was thrown while handling event: Network.requestWillBeSent
Attachments
[PATCH] Proposed Fix (1.47 KB, patch)
2018-11-06 16:49 PST, Joseph Pecoraro
no flags
Joseph Pecoraro
Comment 1 2018-11-06 16:49:53 PST
Created attachment 354030 [details] [PATCH] Proposed Fix
Matt Baker
Comment 2 2018-11-06 17:54:21 PST
Comment on attachment 354030 [details] [PATCH] Proposed Fix r=me
WebKit Commit Bot
Comment 3 2018-11-06 23:32:52 PST
Comment on attachment 354030 [details] [PATCH] Proposed Fix Clearing flags on attachment: 354030 Committed r237917: <https://trac.webkit.org/changeset/237917>
WebKit Commit Bot
Comment 4 2018-11-06 23:32:53 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5 2018-11-06 23:33:39 PST
Note You need to log in before you can comment on or make changes to this bug.