ServiceWorker Inspector: Uncaught Exception: null is not an object (evaluating 'resource.target.addResource') https://bugs.webkit.org/show_bug.cgi?id=191339

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2018-11-06
Reviewed by Matt Baker.

* workers/service/ServiceWorkerJob.cpp:
(WebCore::ServiceWorkerJob::fetchScriptWithContext):
Use the Service Worker's identifier, not this static but otherwise unknown identifier.

Canonical link: https://commits.webkit.org/206156@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@237917 268f45cc-cd09-0410-ab3c-d52691b4dbfc